# copilotkit-strands

./: .gitignore  package.json  start.bat  start.sh
_internal/: next.config.ts  package.json
_internal/agent/: main.py  pyproject.toml  test_transform.py
_internal/agent/aws/: credentials.example
_internal/agent/knowledge/: processes.md
_internal/agent/notebooks/: FS_LEGACY.ipynb  download_pipeline_artifacts.ipynb  forecast_review.ipynb  forecast_reviewer_artifacts.ipynb  forecast_reviewer_transform.ipynb  forecast_setup.ipynb  pba_query.sql
_internal/agent/processes/: forecast_review.md  forecast_setup.md
_internal/agent/tools/: batch_http.py  duckdb_etl.py  run_process.py  sim_data.py
_internal/agent/tools/udfs/: __init__.py  batch_fetch.py  check_mw_cookie.py  create_sim.py  fetch_ct_metadata.py  fetch_vovi_batch.py  fetch_vovi_forecast.py  fetch_vp_pipeline.py  generate_ctx_id.py  home_path.py
_internal/scripts/: run-agent.bat
_internal/src/app/: globals.css  page.tsx
_internal/src/app/api/grid-data/: route.ts
_internal/src/app/api/visual-data/: route.ts
_internal/src/app/dashboard/: page.tsx
_internal/src/components/inventory/: ForecastDashboard.module.css  ForecastDashboard.tsx  types.ts
_internal/src/types/: react-plotly.js.d.ts
agent/: main.py
env/: .env.example
